2007-12-10  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Build library before backends.
	* TODO: Notes on linking issues.
	* backend/file/Makefile.am: Link the built qof library
	* backend/sqlite/Makefile.am: Link the built qof library
	  and the built qofsql library.
	* backend/sqlite/qof-sqlite.c: Note presence of a bug
	  (unfixed). Sqlite-kvp table is not being created.
	* configure.in: Migrate to libgda3-3.
	* qof-1.pc.in: Remove Requires.private as libxml2 is
	  no longer needed, even for static. The XML backend
	  is a GModule.
	* qof/Makefile.am: Prune the linkages and use libgdasql-3.0
	  instead of the entire libgda3-3.
	* qof/qofsql.c: New header location for libgda3-3.
	* qof/test/Makefile.am: Prune linkages.

2007-11-15  Neil Williams  <linux@codehelp.co.uk>

	* HACKING,
	configure.in,
	Makefile.am,
	autogen.sh : Remove intltool and glib-gettextize
	in favour of plain gettext.

2007-11-15  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath, m4/ChangeLog.

2007-11-15  Neil Williams  <linux@codehelp.co.uk>

	* configure.in : Make the sqlite backend build
	by default. Tidy up the embedded option to drop
	libgda and use internal SQL parsing.

2007-09-19  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c:
	(delete_event): Improve debug message to show the status of the instance.
	(kvpvalue_to_sql), qsql_create): Avoid trying to create a kvp record
	for an empty frame.
	* qof/qofevent.c: (qof_event_generate_internal): Improve debug
	messages to show the entity type affected by the event.

2007-09-17  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c:
	(kvp_value_to_qof_type_helper), (sql_to_kvp_helper),
	(string_to_kvp_value), (kvpvalue_to_sql), (build_kvp_table),
	(qsql_load_kvp) : New functions to support KVP

	(string_param_to_sql), (create_param_list), (create_each_param),
	(delete_event), (create_event), (qsql_modify), (record_foreach),